completed work section by adding remaing projects and fixing alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -63,9 +63,6 @@ body{
 /* hero section */
 .jumbotron {
     background-color: transparent;
-    
-
-   
 }
 
 .jumbotron h1{
@@ -75,22 +72,26 @@ body{
 .jumbotron .heading{
      justify-content: center;
 }
-.button{
+.btn{
     border: 1px solid var(--primary);
+    border-radius: 0.3rem;
     background-color: var(--primary);
     text-decoration: none;
     color: white;
     text-align: center;
     padding: 1rem;
     margin: 1rem;
-
 }
 
-.button:hover{
+
+.btn:hover{
     border: 2px solid black;
     background-color: #5bba6f;
-    box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.7)
-    
+    box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.7);
+    text-decoration: none;    
+}
+a:hover{
+    color:white;
 }
 .jumbotron span {
     color: var(--primary);
@@ -110,13 +111,14 @@ body{
     justify-content: flex-start;
     flex-wrap: nowrap;
     font-size: larger;
+    border-bottom: 2px solid var(--primary);
   
 
 }
 .bio{
     display: flex;
     flex-wrap: wrap;
-    align-items: flex-end;
+    align-items: flex-start;
 }
 
 #profile-image{
@@ -132,26 +134,49 @@ body{
 
 /* hero section end */
 /* main */
-.work{
+
+#work{
     padding: 2rem 1rem;
     margin-bottom: 2rem;
-    background-color: #e9ecef;
+    background-color: transparent;
     border-radius: 0.3rem;
+    
+
+    
 }
 #work h2{ 
     color: var(--primary);
     font-weight: bold;
     font-size: xx-large;
-    border-right: 5px solid var(--primary)
+    border-right: 2px solid var(--primary)
 }
 .card{
-    width:100%;
+    
     background-color:  #fefae0;
-    border:none;
+    border: 2px dotted var(--primary);
+    margin:3px;
+    padding: 0;
+    height:auto;
+    justify-content: space-between;
+    
+
 }
-#horiseon img{
+
+.card .btn{
+    padding:4px;
+    width: 140px;
+    border-radius: 0.3rem;
+    margin: 0;
+    
+   
    
 }
+
+
+.projects{
+    flex-wrap: nowrap;    
+}
+
 /* main end */
 /* footer */
 #footer{
